--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,28 @@ form .btn:hover{
     color:#000000;
     font-weight: 800;
 }
+.approval-icons{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+.approve-icon {
+    color: green;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.disapprove-icon {
+    color: red;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.border-success {
+    border: 2px solid green;
+}
+
+.border-danger {
+    border: 2px solid red;
+}
