--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,23 @@ form .btn:hover{
 .border-danger {
     border: 2px solid red;
 }
+.message {
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.message.success {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.message.error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
+.char-counter {
+    text-align: right;
+    font-size: 0.9em;
+    color: gray;
+}
