--- a/styles.css
+++ b/styles.css
@@ -60,16 +60,27 @@ form .btn:hover{
     flex: 1 1 calc(25% - 10px);
     margin-bottom: 10px;
 }
+.card-text{
+    margin-bottom: 20px;
+}
+
+
 .card-title{
     color:#000000;
     font-weight: 800;
+    text-align: center;
 }
-.approval-icons{
+.approval-icons {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    width: 100%; 
     
 }
+
 .approve-icon {
     color: green;
     font-size: 25px;
@@ -109,3 +120,14 @@ form .btn:hover{
     font-size: 0.9em;
     color: gray;
 }
+/* CSS pour les images dans les cartes d'idées */
+.card .card-body .category-image {
+    width: 100%; /* Largeur maximale de l'image */
+    height: 200px; /* Hauteur fixe de l'image */
+    object-fit: cover; /* Pour s'assurer que l'image couvre entièrement le conteneur */
+    display: block;
+    margin-bottom: 10px; /* Espacement en bas de l'image */
+    border-radius: 5px; /* Coins arrondis */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Ombre légère */
+}
+
